# embassy-pico-template

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
src/: lib.rs  macros.rs  main.rs
